Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8219

enforce_storage_engine cannot be set globally

    XMLWordPrintable

Details

    • 10.1.6-1

    Description

      MariaDB [test]> set global enforce_storage_engine=MyISAM;
      ERROR 1228 (HY000): Variable 'enforce_storage_engine' is a SESSION variable and can't be used with SET GLOBAL

      I truly hope it's an oversight, although from the last comment to MDEV-6858, it seems it might have been done on purpose. It's understandable why a super-user should be able to overrule it sometimes on the session level, but the main goal of it is still being a server-wide rule.

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 5m
                  1d 5m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.