MDEV-8219: enforce_storage_engine cannot be set globally

Change session only variable enforce_storage_engine to be
session variable and make sure that also global value
is used if session variable is not set.