sql/sys_vars.cc
@@ -3426,7 +3426,7 @@ static Sys_var_plugin Sys_default_tmp_storage_engine(
 
 static Sys_var_plugin Sys_enforce_storage_engine(
        "enforce_storage_engine", "Force the use of a storage engine for new tables",
-       SESSION_ONLY(enforced_table_plugin),
+       SESSION_VAR(enforced_table_plugin),
        NO_CMD_LINE, MYSQL_STORAGE_ENGINE_PLUGIN,
        DEFAULT(&enforced_storage_engine), NO_MUTEX_GUARD, NOT_IN_BINLOG, ON_CHECK(check_has_super));
 
